# ProdusicAI

./: .gitattributes  .gitignore  LICENSE  README.md  ideas.csv  ideas.txt  pyproject.toml  test.ipynb  todo.md  ui.py
.cache/41/: cache.db
.cache/42/: cache.db
src/: agent_framework.py  agents.py  bot.py  config.py  controlflow.py  controlflow_agents.py  logger.py  main.py  rag.py  test.ipynb  ui.py  youtube.py
