[project]
name = "produsicai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.15",
    "google-api-python-client>=2.149.0",
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.3",
    "langchain-openai>=0.2.3",
    "langchain>=0.3.4",
    "nicegui>=2.5.0",
    "openai>=1.52.2",
    "pandas>=2.2.3",
    "pyautogen>=0.3.1",
    "ruff>=0.7.0",
    "sentence-transformers>=3.2.1",
    "torch>=2.5.0",
]
